// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swipe test with testing library should render correctly when Swiper not child 1`] = `
<div>
  <div
    class="rc-swiper"
    style="--rc-swipe-slide-size: 100%; --rc-swipe-track-offset: 0%; width: 100px; height: 100px;"
  >
    <div
      class="rc-swiper__track rc-swiper__track--allow-touch-move"
    >
      <div
        class="rc-swiper__track-inner"
      />
    </div>
    <div
      class="rc-swiper__indicator"
    >
      <div
        class="rc-indicator"
      />
    </div>
  </div>
</div>
`;

exports[`Swipe test with testing library should render correctly when prop stuckAtBoundary is true 1`] = `
<div>
  <div
    class="rc-swiper"
    style="--rc-swipe-slide-size: 100%; --rc-swipe-track-offset: 0%; width: 100px; height: 100px;"
  >
    <div
      class="rc-swiper__track rc-swiper__track--allow-touch-move"
    >
      <div
        class="rc-swiper__track-inner"
      >
        <div
          class="rc-swiper__slide"
          style="left: -0%; transform: none;"
        >
          <div
            class="rc-swiper-item"
          >
            1
          </div>
        </div>
        <div
          class="rc-swiper__slide"
          style="left: -100%; transform: translate3d(100%,0,0);"
        >
          <div
            class="rc-swiper-item"
          >
            2
          </div>
        </div>
        <div
          class="rc-swiper__slide"
          style="left: -200%; transform: translate3d(-100%,0,0);"
        >
          <div
            class="rc-swiper-item"
          >
            3
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-swiper__indicator"
    >
      <div
        class="rc-indicator"
      >
        <div
          class="rc-indicator__dot rc-indicator__dot--active"
        />
        <div
          class="rc-indicator__dot"
        />
        <div
          class="rc-indicator__dot"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Swipe test with testing library should render correctly when using customer renderIndicator 1`] = `
<div>
  <div
    class="rc-swiper"
    style="--rc-swipe-slide-size: 100%; --rc-swipe-track-offset: 0%; width: 100px; height: 100px;"
  >
    <div
      class="rc-swiper__track rc-swiper__track--allow-touch-move"
    >
      <div
        class="rc-swiper__track-inner"
      >
        <div
          class="rc-swiper__slide"
          style="left: -0%; transform: none;"
        >
          <div
            class="rc-swiper-item"
          >
            1
          </div>
        </div>
        <div
          class="rc-swiper__slide"
          style="left: -100%; transform: translate3d(100%,0,0);"
        >
          <div
            class="rc-swiper-item"
          >
            2
          </div>
        </div>
        <div
          class="rc-swiper__slide"
          style="left: -200%; transform: translate3d(-100%,0,0);"
        >
          <div
            class="rc-swiper-item"
          >
            3
          </div>
        </div>
      </div>
    </div>
    <div
      class="custom-indicator"
    >
      1
      /
      3
    </div>
  </div>
</div>
`;

exports[`Swipe test with testing library should render initial swipe correctly 1`] = `
<div>
  <div
    class="rc-swiper"
    style="--rc-swipe-slide-size: 100%; --rc-swipe-track-offset: 0%; width: 100px; height: 100px;"
  >
    <div
      class="rc-swiper__track rc-swiper__track--allow-touch-move"
    >
      <div
        class="rc-swiper__track-inner"
      >
        <div
          class="rc-swiper__slide"
          style="left: -0%; transform: none;"
        >
          <div
            class="rc-swiper-item"
          >
            1
          </div>
        </div>
        <div
          class="rc-swiper__slide"
          style="left: -100%; transform: translate3d(100%,0,0);"
        >
          <div
            class="rc-swiper-item"
          >
            2
          </div>
        </div>
        <div
          class="rc-swiper__slide"
          style="left: -200%; transform: translate3d(-100%,0,0);"
        >
          <div
            class="rc-swiper-item"
          >
            3
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-swiper__indicator"
    >
      <div
        class="rc-indicator"
      >
        <div
          class="rc-indicator__dot rc-indicator__dot--active"
        />
        <div
          class="rc-indicator__dot"
        />
        <div
          class="rc-indicator__dot"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Swipe test with testing library should render initial swipe correctly 2`] = `
<div>
  <div
    class="rc-swiper"
    style="--rc-swipe-slide-size: 100%; --rc-swipe-track-offset: 0%; width: 100px; height: 100px;"
  >
    <div
      class="rc-swiper__track rc-swiper__track--allow-touch-move"
    >
      <div
        class="rc-swiper__track-inner"
      >
        <div
          class="rc-swiper__slide"
          style="left: -0%; transform: none;"
        >
          <div
            class="rc-swiper-item"
          >
            1
          </div>
        </div>
        <div
          class="rc-swiper__slide"
          style="left: -100%; transform: translate3d(100%,0,0);"
        >
          <div
            class="rc-swiper-item"
          >
            2
          </div>
        </div>
        <div
          class="rc-swiper__slide"
          style="left: -200%; transform: translate3d(-100%,0,0);"
        >
          <div
            class="rc-swiper-item"
          >
            3
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-swiper__indicator"
    >
      <div
        class="rc-indicator"
      >
        <div
          class="rc-indicator__dot rc-indicator__dot--active"
        />
        <div
          class="rc-indicator__dot"
        />
        <div
          class="rc-indicator__dot"
        />
      </div>
    </div>
  </div>
</div>
`;
